--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -232,7 +232,7 @@
             <h2>Adopters</h2>
             <div class="press-cards">
                 <div>
-                    <p>DeEEP Network uses Kairos under the hood of their device to offer a high secure system with trusted boot.</p>
+                    <p>DeEEP Network uses Kairos under the hood of their device to offer a highly secure system with trusted boot.</p>
                     <div class="press-card-img">
                         {{ $logo := resources.Get "/img/deeep-network.png" }}
                         <img src="{{ $logo.RelPermalink }}" alt="spectro intel logo" loading="lazy"/>
