--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     {{ if hugo.IsProduction }}
-    <img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=051a8a26-af2c-4a22-a7d6-dba22bef829f" />
+    <div><img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=051a8a26-af2c-4a22-a7d6-dba22bef829f" /></div>
     {{ end }}
   </head>
   <body class="td-section astro-7XAARZHW">
