Re-use kairos_version as per the PR comments
Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/layouts/shortcodes/googleVersion.html
+++ b/layouts/shortcodes/googleVersion.html
@@ -1,1 +1,1 @@
-{{- $.Page.Site.Params.softwareVersions.google_cloud_image_version -}}
+{{- $.Page.Site.Params.softwareVersions.kairos_version | replace "." "-" -}}
