Fix latest version on homepage
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
                 <p>our latest release</p>
                 <div class="hero-latest-release-version">
                   <div>Latest release</div>
-                  <div><a href="https://github.com/kairos-io/kairos/releases/tag/{{$.Page.Site.Params.softwareVersions.kairos_version}}">{{$.Page.Site.Params.softwareVersions.kairos_version}}</a></div>
+                  <div><a href="https://github.com/kairos-io/kairos/releases/tag/{{.Site.Params.latest_version}}">{{.Site.Params.latest_version}}</a></div>
                 </div>
               </div>
             </div>
