Fix download links on homepage

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -1,4 +1,4 @@
-{{ $kairosVersion := $.Page.Site.Params.softwareVersions.kairos_version }}
+{{ $latestVersion := $.Page.Site.Params.latest_version }}
 {{ $k3sVersion := $.Page.Site.Params.softwareVersions.k3s_version }}
 {{ $tagK3sVersion := replace $k3sVersion "+" "-" | safeHTML }}
 <main>
@@ -12,7 +12,7 @@
                         <img src="{{ $logo.RelPermalink }}" alt="kairos ubuntu logo" loading="lazy"/>
                     </div>
                     <div>
-                        <a href="https://github.com/kairos-io/kairos/releases/download/{{$kairosVersion}}/kairos-ubuntu-24.04-standard-amd64-generic-{{$kairosVersion}}-k3s{{$k3sVersion}}.iso" target="_self" class="unclickable">
+                        <a href="https://github.com/kairos-io/kairos/releases/download/{{$latestVersion}}/kairos-ubuntu-24.04-standard-amd64-generic-{{$latestVersion}}-k3s{{$k3sVersion}}.iso" target="_self" class="unclickable">
                             <span>X86</span><span> version</span>
                             <i class="fa-solid fa-download"></i>
                         </a>
@@ -22,10 +22,10 @@
                         </a>
                         <dialog id="ubuntu-modal">
                             <div class="copied-ubuntu">Copied</div>
-                            <p>Please use the following docker command: </p><pre class="code-ubuntu">docker pull quay.io/kairos/ubuntu:24.04-standard-arm64-rpi4-{{$kairosVersion}}-k3s{{$tagK3sVersion}}-img</pre><p></p>
+                            <p>Please use the following docker command: </p><pre class="code-ubuntu">docker pull quay.io/kairos/ubuntu:24.04-standard-arm64-rpi4-{{$latestVersion}}-k3s{{$tagK3sVersion}}-img</pre><p></p>
                             <p>You can find more information: <a href="https://kairos.io/docs/reference/image_matrix/#image-flavors" target="_blank">here</a></p>
                             <div class="modal-buttons">
-                                <button class="copy-to-clipboard-ubuntu plausible-event-name=Docker+Pull plausible-event-flavor=ubuntu plausible-event-flavor_release=24.04 plausible-event-version={{$kairosVersion}}-k3s{{$tagK3sVersion}} plausible-event-arch=arm64 plausible-event-variant=standard plausible-event-model=rpi4">Copy Command</button>
+                                <button class="copy-to-clipboard-ubuntu plausible-event-name=Docker+Pull plausible-event-flavor=ubuntu plausible-event-flavor_release=24.04 plausible-event-version={{$latestVersion}}-k3s{{$tagK3sVersion}} plausible-event-arch=arm64 plausible-event-variant=standard plausible-event-model=rpi4">Copy Command</button>
                                 <button class="close-dialog-ubuntu">Close</button>
                             </div>
                         </dialog>
@@ -37,7 +37,7 @@
                         <img src="{{ $logo.RelPermalink }}" alt="kairos fedora logo" loading="lazy"/>
                     </div>
                     <div>
-                        <a href="https://github.com/kairos-io/kairos/releases/download/{{$kairosVersion}}/kairos-fedora-40-standard-amd64-generic-{{$kairosVersion}}-k3s{{$k3sVersion}}.iso" target="_self" class="unclickable">
+                        <a href="https://github.com/kairos-io/kairos/releases/download/{{$latestVersion}}/kairos-fedora-40-standard-amd64-generic-{{$latestVersion}}-k3s{{$k3sVersion}}.iso" target="_self" class="unclickable">
                             <span>X86</span><span> version</span>
                             <i class="fa-solid fa-download"></i>
                         </a>
@@ -49,7 +49,7 @@
                         <img src="{{ $logo.RelPermalink }}" alt="kairos alpine logo" loading="lazy"/>
                     </div>
                     <div>
-                        <a href="https://github.com/kairos-io/kairos/releases/download/{{$kairosVersion}}/kairos-alpine-3.19-standard-amd64-generic-{{$kairosVersion}}-k3s{{$k3sVersion}}.iso" target="_self" class="unclickable">
+                        <a href="https://github.com/kairos-io/kairos/releases/download/{{$latestVersion}}/kairos-alpine-3.19-standard-amd64-generic-{{$latestVersion}}-k3s{{$k3sVersion}}.iso" target="_self" class="unclickable">
                             <span>X86</span><span> version</span>
                             <i class="fa-solid fa-download"></i>
                         </a>
@@ -59,10 +59,10 @@
                         </a>
                         <dialog id="alpine-modal">
                             <div class="copied-alpine">Copied</div>
-                            <p>Please use the following docker command: </p><pre class="code-alpine">docker pull quay.io/kairos/alpine:3.19-standard-arm64-rpi4-{{$kairosVersion}}-k3s{{$tagK3sVersion}}-img</pre><p></p>
+                            <p>Please use the following docker command: </p><pre class="code-alpine">docker pull quay.io/kairos/alpine:3.19-standard-arm64-rpi4-{{$latestVersion}}-k3s{{$tagK3sVersion}}-img</pre><p></p>
                             <p>You can find more information: <a href="https://kairos.io/docs/reference/image_matrix/#image-flavors" target="_blank">here</a></p>
                             <div class="modal-buttons">
-                                <button class="copy-to-clipboard-alpine plausible-event-name=Docker+Pull plausible-event-flavor=alpine plausible-event-flavor_release=3.19 plausible-event-version={{$kairosVersion}}-k3s{{$tagK3sVersion}} plausible-event-arch=arm64 plausible-event-variant=standard plausible-event-model=rpi4">Copy Command</button>
+                                <button class="copy-to-clipboard-alpine plausible-event-name=Docker+Pull plausible-event-flavor=alpine plausible-event-flavor_release=3.19 plausible-event-version={{$latestVersion}}-k3s{{$tagK3sVersion}} plausible-event-arch=arm64 plausible-event-variant=standard plausible-event-model=rpi4">Copy Command</button>
                                 <button class="close-dialog-alpine">Close</button>
                             </div>
                         </dialog>
