fix getting started link in homepage
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,7 +28,7 @@
               <span class="subtitle astro-7XAARZHW">
                 Transform your Linux system and preferred Kubernetes distribution into a secure bootable image for your edge devices.</span>
               <div class="buttons astro-7XAARZHW">
-                <a id="quickstart" href="/docs/getting-started/" class="astro-7XAARZHW">
+                <a id="quickstart" href="/getting-started/" class="astro-7XAARZHW">
                   Quick Start
                 </a>
                 <a id="download" target="_blank" href="https://github.com/kairos-io/kairos" class="astro-7XAARZHW"><span class="github-star"><img src="/index/star.svg" alt="github star"></span><span class="github-text">Star us on GitHub</span></a>
