Update commercial support link
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/partials/homepage-content.html
+++ b/layouts/partials/homepage-content.html
@@ -219,8 +219,8 @@
                     </div>
                     <p><span>Spectro Cloud</span> is the main supporter behind Kairos and provides enterprise-grade Kubernetes management through its platform, Palette, which allows organizations to deploy, manage, and scale Kubernetes across various environments, including public clouds, data centers, bare metal, and edge computing.</p>
                     <div class="buttons astro-7XAARZHW">
-                        <a class="contact-link" href="mailto:kairos@spectrocloud.com" class="astro-7XAARZHW" data-partner="Spectro Cloud">
-                            Contact
+                        <a class="contact-link" href="https://www.spectrocloud.com/solutions/kairos-support" class="astro-7XAARZHW" data-partner="Spectro Cloud">
+                            Learn more
                         </a>
                     </div>
                 </div>
