Fix missing dash `-` from image tags
This:
24.04-standard-amd64-generic-v3.6.0-k3sv1.33.5-k3s1
should be:
24.04-standard-amd64-generic-v3.6.0-k3s-v1.33.5-k3s1

otherwise the link in this page renders wrong:

https://kairos.io/v3.6.0/docs/examples/airgap/

Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/layouts/shortcodes/oci.html
+++ b/layouts/shortcodes/oci.html
@@ -18,7 +18,7 @@
 -
 {{- $.Page.Site.Params.softwareVersions.kairos_version -}}
 {{- if eq (.Get "variant") "standard" -}}
-    -k3s{{- replace $.Page.Site.Params.softwareVersions.k3s_version "+" "-" -}}
+    -k3s-{{- replace $.Page.Site.Params.softwareVersions.k3s_version "+" "-" -}}
 {{- end -}}
 {{- with .Get "suffix" -}}
     -{{- . -}}
