--- a/layouts/partials/homepage-content.html
+++ b/layouts/partials/homepage-content.html
@@ -95,38 +95,44 @@
             <h2>Hot off the press</h2>
             <div class="press-cards">
                 <div>
-                    <p>See how we're collaborating with Intel and Spectro Cloud on the new Secure Edge-Native Architecture</p>
-                    <div class="press-card-img">
-                        {{ $logo := resources.Get "/img/spectro-intel.png" }}
-                        <img src="{{ $logo.RelPermalink }}" alt="spectro intel logo" loading="lazy"/>
+                    <p>How to integrate Kairos architecturally into an edge AI platform</p>
+                    <div class="press-card-img press-card-img--cncf">
+                        {{ $logo := resources.Get "/img/logo_cloudnative.png" }}
+                        <img src="{{ $logo.RelPermalink }}" alt="CNCF logo" loading="lazy"/>
                     </div>
-                    <a href="https://www.spectrocloud.com/news/spectro-cloud-launches-the-secure-edge-native-architecture-sena" target="_blank">
+                    <a href="https://www.cncf.io/blog/2025/12/29/how-to-integrate-kairos-architecturally-into-an-edge-ai-platform/" target="_blank">
                         Read more
                         <i class="fa-solid fa-chevron-right"></i>
                     </a>
                 </div>
                 <div>
-                    <p>Check us out in this The New Stack article by our maintainer, Ettore di Giacinto</p>
-                    <div class="press-card-img">
-                        {{ $logo := resources.Get "/img/theNewStack.png" }}
-                        <img src="{{ $logo.RelPermalink }}" alt="the New Stack logo" loading="lazy"/>
+                    <p>Building secure Kubernetes edge images with Kairos and K0s</p>
+                    <div class="press-card-img press-card-img--cncf">
+                        {{ $logo := resources.Get "/img/logo_cloudnative.png" }}
+                        <img src="{{ $logo.RelPermalink }}" alt="CNCF logo" loading="lazy"/>
                     </div>
-                    <a href="https://thenewstack.io/honey-i-secured-your-boot-edge-trusted-boot-with-kairos/" target="_blank">
+                    <a href="https://www.cncf.io/blog/2025/03/25/building-secure-kubernetes-edge-images-with-kairos-and-k0s/" target="_blank">
                         Read more
                         <i class="fa-solid fa-chevron-right"></i>
                     </a>
                 </div>
                 <div>
-                    <p>Learn how to use the famous OSS project, LocalAI, with Kairos and K3s on your nodes</p>
-                    <div class="press-card-img">
-                        {{ $logo := resources.Get "/img/k8s-superpowers.png" }}
-                        <img src="{{ $logo.RelPermalink }}" alt="k8sgpt kubernetes superpowers logo" loading="lazy"/>
+                    <p>Spectro Cloud announces Hadron, a lightweight, security-first Linux base for modern enterprise edge deployments</p>
+                    <div class="press-card-img press-card-img--light">
+                        {{ $logo := resources.Get "/img/bwlogo_navy_9d99ebf340.jpg" }}
+                        <img src="{{ $logo.RelPermalink }}" alt="Business Wire logo" loading="lazy"/>
                     </div>
-                    <a href="https://thenewstack.io/looking-for-a-k3os-alternative-choosing-a-container-os-for-edge-k8s/" target="_blank">
+                    <a href="https://www.businesswire.com/news/home/20260128584925/en/Spectro-Cloud-Announces-Hadron-A-Lightweight-Security-First-Linux-Base-for-Modern-Enterprise-Edge-Deployments" target="_blank">
                         Read more
                         <i class="fa-solid fa-chevron-right"></i>
                     </a>
                 </div>
+            </div>
+            <div class="press-more">
+                <a href="/press/">
+                    See more
+                    <i class="fa-solid fa-arrow-right"></i>
+                </a>
             </div>
         </div>
     </div>
