add events page and a link on the homepage

--- a/layouts/partials/homepage-content.html
+++ b/layouts/partials/homepage-content.html
@@ -187,6 +187,18 @@
             <p>The Linux Foundation® (TLF) has registered trademarks and uses trademarks. For a list of TLF trademarks, see <a href="https://www.linuxfoundation.org/trademark-usage/" target="_blank">Trademark Usage</a>.</p>
         </div>
     </div>
+    <div class="events-blade">
+        <div class="events-blade-wrap">
+            <h2>Kairos on the road</h2>
+            <p>Come and visit us at one of our upcoming events.</p>
+            <div class="events-cta">
+                <a href="/events/">
+                    See all events
+                    <i class="fa-solid fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+    </div>
     <div id="join-us-blade">
         <div class="join-us-wrap">
             <h2>Join our community</h2>
